[package]
name = "ukanren"
version = "0.0.6-alpha.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
license = "MIT"
description = "Rust implementation of µKanren, a featherweight relational programming language."
repository = "https://github.com/ekzhang/ukanren-rs"
documentation = "https://docs.rs/ukanren"
keywords = ["kanren", "prolog", "logic-programming", "language"]
readme = "README.md"
edition = "2018"

[dependencies]
